.gitignore and Canvas Line Directive added

--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content padding>
-  <img *ngIf="item" class="image-full" [src]="getImageSrc()"/>
+  <!--<img *ngIf="item" class="image-full" [src]="getImageSrc()"/>-->
+  <canvas style="border: 1px solid blue;" width="500" height="300" canvas-line></canvas>
 </ion-content>
 
