--- a/src/pages/items/items.html
+++ b/src/pages/items/items.html
@@ -12,7 +12,8 @@
 <ion-content>
   <ion-spinner padding class="center large-spinner" *ngIf="filesLoading$ | async"></ion-spinner>
   <ion-list>
-    <button ion-item *ngFor="let file of files$ | async" (click)="onItemSelected(file)">
+    <button ion-item [class.highlight]="file == selected"
+      *ngFor="let file of files$ | async" (click)="onItemSelected(file)">
       <h2>
         {{ file }}
       </h2>
