Added canvas with canvas-line directive

--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -7,5 +7,6 @@
 <ion-content padding>
   <!--<img *ngIf="item" class="image-full" [src]="getImageSrc()"/>-->
   <canvas style="border: 1px solid blue;" width="500" height="300" canvas-line></canvas>
+  <canvas style="border: 1px solid blue;" width="500" height="300" canvas-rect></canvas>
 </ion-content>
 
