image rescales. To access the scale factor, you can reference the currentImage.scale

--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -6,7 +6,7 @@
 
 <ion-content padding>
     <div class="image-canvas-div">
-        <img class="img-position" src="{{currentImage.src}}"/>
+        <img class="img-position" src="{{currentImage.src}}" width="{{currentImage.width}}" height="{{currentImage.height}}"/>
         <canvas class="canvas-position" width="{{currentImage.width}}" height="{{currentImage.height}}" canvas-line></canvas>
     </div>
 </ion-content>
