--- a/src/pages/items/items.html
+++ b/src/pages/items/items.html
@@ -13,7 +13,7 @@
   <ion-spinner padding class="center large-spinner" *ngIf="filesLoading$ | async"></ion-spinner>
   <ion-list>
     <button ion-item [class.highlight]="file == selected"
-      *ngFor="let file of files$ | async" (click)="onItemSelected(file)">
+      *ngFor="let file of files" (click)="onItemSelected(file)">
       <h2>
         {{ file }}
       </h2>
