--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -14,17 +14,17 @@
             <ion-row>
                 <ion-col>
                     <button ion-button [ngClass]="{'activated-button': selectedCanvasDirective === canvasDirectives.canvas_line}" block
-                    (click)="selectCanvasDirective(canvasDirectives.canvas_line)"><p class="button-text">Line (L)</p>
+                    (click)="selectCanvasDirective(canvasDirectives.canvas_line)"><p class="button-text">Line (Q)</p>
                         <ion-icon name="md-create"></ion-icon></button>
                 </ion-col>
                 <ion-col>
                     <button ion-button [ngClass]="{'activated-button': selectedCanvasDirective === canvasDirectives.canvas_rect}" color="primary" block
-                            (click)="selectCanvasDirective(canvasDirectives.canvas_rect)"><p class="button-text">Rectangle (R)</p>
+                            (click)="selectCanvasDirective(canvasDirectives.canvas_rect)"><p class="button-text">Rectangle (W)</p>
                         <ion-icon name="ios-square"></ion-icon></button>
                 </ion-col>
                 <ion-col>
                     <button ion-button [ngClass]="{'activated-button': selectedCanvasDirective === canvasDirectives.canvas_polygon}" color="primary" block
-                            (click)="selectCanvasDirective(canvasDirectives.canvas_polygon)"><p class="button-text">Polygon (P)</p>
+                            (click)="selectCanvasDirective(canvasDirectives.canvas_polygon)"><p class="button-text">Polygon (E)</p>
                         <ion-icon name="star"></ion-icon></button>
                 </ion-col>
             </ion-row>
