Added configurable hotkeys for canvas tools

--- a/src/pages/hotkeys/hotkeys.html
+++ b/src/pages/hotkeys/hotkeys.html
@@ -23,6 +23,18 @@
       <ion-label stacked>Previous image</ion-label>
       <ion-input type="text" formControlName="prevImage" maxlength="1"></ion-input>
     </ion-item>
+    <ion-item>
+      <ion-label stacked>Draw line</ion-label>
+      <ion-input type="text" formControlName="line" maxlength="1"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>Draw rectangle</ion-label>
+      <ion-input type="text" formControlName="rectangle" maxlength="1"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>Draw polygon</ion-label>
+      <ion-input type="text" formControlName="polygon" maxlength="1"></ion-input>
+    </ion-item>
     <button ion-button type="submit" margin>Update</button>
   </form>
 </ion-content>
