--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -14,17 +14,20 @@
             <ion-row>
                 <ion-col>
                     <button ion-button [ngClass]="{'activated-button': getSelectedCanvasDirective() === canvasDirectives.canvas_line}" block
-                    (click)="selectCanvasDirective(canvasDirectives.canvas_line)"><p class="button-text">Line (Q)</p>
+                    (click)="selectCanvasDirective(canvasDirectives.canvas_line)">
+                    <p class="button-text">{{"Line (" + hotkeyProvider.hotkeys.line + ")"}}</p>
                         <ion-icon name="md-create"></ion-icon></button>
                 </ion-col>
                 <ion-col>
                     <button ion-button [ngClass]="{'activated-button': getSelectedCanvasDirective() === canvasDirectives.canvas_rect}" color="primary" block
-                            (click)="selectCanvasDirective(canvasDirectives.canvas_rect)"><p class="button-text">Rectangle (W)</p>
+                    (click)="selectCanvasDirective(canvasDirectives.canvas_rect)">
+                    <p class="button-text">{{"Rectangle (" + hotkeyProvider.hotkeys.rectangle + ")"}}</p>
                         <ion-icon name="ios-square"></ion-icon></button>
                 </ion-col>
                 <ion-col>
                     <button ion-button [ngClass]="{'activated-button': getSelectedCanvasDirective() === canvasDirectives.canvas_polygon}" color="primary" block
-                            (click)="selectCanvasDirective(canvasDirectives.canvas_polygon)"><p class="button-text">Polygon (E)</p>
+                    (click)="selectCanvasDirective(canvasDirectives.canvas_polygon)">
+                    <p class="button-text">{{"POLYGON (" + hotkeyProvider.hotkeys.polygon + ")"}}</p>
                         <ion-icon name="star"></ion-icon></button>
                 </ion-col>
             </ion-row>
