Adding boxes and lines list

--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -49,7 +49,15 @@
                         height="{{getCurrentImage().height}}"
                         canvas-editor></canvas>
             </div>
-        </ion-row>
+		  	<div class="labels-div">
+			  	<h1>Boxes</h1>
+			  	<ion-list>
+					<button ion-item *ngFor="let itm of dummy" (click)="itemSelected(item)">
+					      {{ itm }}
+						    </button> 
+				</ion-list>
+		  	</div>
+		</ion-row>
     </ion-grid>
 
 </ion-content>
