Made the keybinding config inputs a lot better

--- a/src/pages/hotkeys/hotkeys.html
+++ b/src/pages/hotkeys/hotkeys.html
@@ -17,23 +17,33 @@
   <form [formGroup]="hotkeys" (ngSubmit)="updateHotkeys()">
     <ion-item>
       <ion-label stacked>Next image</ion-label>
-      <ion-input type="text" formControlName="nextImage" maxlength="1"></ion-input>
+      <ion-input type="text" formControlName="nextImage"
+        (click)="$event.target.select()"
+        (keydown)="markInput($event)" (keyup)="saveCompositeInput($event, 'nextImage')"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Previous image</ion-label>
-      <ion-input type="text" formControlName="prevImage" maxlength="1"></ion-input>
+      <ion-input type="text" formControlName="prevImage"
+        (click)="$event.target.select()"
+        (keydown)="markInput($event)" (keyup)="saveCompositeInput($event, 'prevImage')"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Draw line</ion-label>
-      <ion-input type="text" formControlName="line" maxlength="1"></ion-input>
+      <ion-input type="text" formControlName="line"
+        (click)="$event.target.select()"
+        (keydown)="markInput($event)" (keyup)="saveCompositeInput($event, 'line')"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Draw rectangle</ion-label>
-      <ion-input type="text" formControlName="rectangle" maxlength="1"></ion-input>
+      <ion-input type="text" formControlName="rectangle"
+        (click)="$event.target.select()"
+        (keydown)="markInput($event)" (keyup)="saveCompositeInput($event, 'rectangle')"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Draw polygon</ion-label>
-      <ion-input type="text" formControlName="polygon" maxlength="1"></ion-input>
+      <ion-input type="text" formControlName="polygon"
+        (click)="$event.target.select()"
+        (keydown)="markInput($event)" (keyup)="saveCompositeInput($event, 'polygon')"></ion-input>
     </ion-item>
     <button ion-button type="submit" margin>Update</button>
   </form>
