I don't respect these bugs, no I do not

--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -51,6 +51,7 @@
             </div>
 		  	<div class="labels-div">
 			  	<ion-list>
+				  	<h1>Boxes</h1>
 					<button ion-item *ngFor="let itm of dummy" (click)="itemSelected(item)">
 					      {{ itm }}
 						    </button> 
