Delete functiponality from menu list

--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -50,11 +50,23 @@
                         canvas-editor></canvas>
             </div>
 		  	<div class="labels-div">
-			  	<ion-list>
-				  	<h1>Boxes</h1>
-					<button ion-item *ngFor="let itm of dummy" (click)="itemSelected(item)">
+			  	<ion-list *ngIf="currentTool==2">
+				  	<h1>Polys</h1>
+					<button ion-item *ngFor="let itm of polys" (click)="itemSelected(itm)">
 					      {{ itm }}
-						    </button> 
+					</button>
+				</ion-list>
+			  	<ion-list *ngIf="currentTool==1">
+				  	<h1>Boxes</h1>
+					<button ion-item *ngFor="let itm of boxes" (click)="itemSelected(itm)">
+					      {{ itm }}
+					</button>
+				</ion-list>
+	  			<ion-list *ngIf="currentTool==0">	  
+				  	<h1>Lines</h1>
+					<button ion-item *ngFor="let itm of lines" (click)="itemSelected(itm)">
+					      {{ itm }}
+					</button> 
 				</ion-list>
 		  	</div>
 		</ion-row>
