Initial commit! Added action div

--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -83,6 +83,9 @@
 					</div>
 				</ion-list>
 		  	</div>
+			<div class="actions-div">
+				<h1>Actions</h1>
+			</div>
 		</ion-row>
     </ion-grid>
 
