Some styling changes

--- a/src/pages/items/items.html
+++ b/src/pages/items/items.html
@@ -12,18 +12,18 @@
           <ion-row>
               <ion-col style="text-align: center">
                   <button ion-button (click)="previousItem()">
-                    <ion-icon name="arrow-back"></ion-icon>
+                    <ion-icon name="ios-arrow-up"></ion-icon>
                     <p class="button-text">
-                      {{"Previous image (" + hotkeys.prevImage + ")"}}
+                      {{"(" + hotkeys.prevImage + ")"}}
                     </p>
                   </button>
               </ion-col>
               <ion-col style="text-align: center">
                   <button ion-button (click)="nextItem()">
                     <p class="button-text">
-                      {{"Next image (" + hotkeys.nextImage + ")"}}
+                      {{"(" + hotkeys.nextImage + ")"}}
                     </p>
-                    <ion-icon name="arrow-forward"></ion-icon>
+                    <ion-icon name="ios-arrow-down"></ion-icon>
                   </button>
               </ion-col>
           </ion-row>
