--- a/src/pages/item/item.html
+++ b/src/pages/item/item.html
@@ -53,19 +53,21 @@
 			<ion-list-header class="labels-list-header">{{getSelectedCanvasDirective().toString()}}</ion-list-header>
 			<ion-scroll scrollY="true" style="height:40%">
 				<ion-list no-border scroll="true">
-					<ion-item *ngFor="let itm of getObjects()">
+					<ion-item no-lines no-padding *ngFor="let itm of getObjects()">
                         <object-input [obj]="itm" (click)="itemSelect(itm)" [(value)]="itm.label" [(id)]="itm.action_id"></object-input>
                         <ion-icon class="icon-button" name="trash" (click)="itemDelete(itm)" item-end></ion-icon>
-					</ion-item>
+                        <hr>
+                    </ion-item>
 				</ion-list>
 			</ion-scroll>
 
 			<ion-list-header class="labels-list-header">Actions</ion-list-header>
 			<ion-scroll scrollY="true" style="height:40%">
 				<ion-list no-border scroll="true">
-					<ion-item *ngFor="let action of actions">
+					<ion-item no-lines no-padding *ngFor="let action of actions">
                         <object-input [(value)]="action.label" [(id)]="action.action_id"></object-input>
                         <ion-icon class="icon-button" name="trash" (click)="actionDelete(action)" item-end></ion-icon>
+                        <hr>
 					</ion-item>
 				</ion-list>
 			</ion-scroll>
